<resources>
    <string name="app_name">Quran Tafsir English Bangla</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string-array name="nav_drawer_items">
        <item>Quran Tafsir English Bangla</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="name_title_ar">وَلَقَدْ يَسَّرْنَا الْقُرْآنَ لِلذِّكْرِ فَهَلْ مِن مُّدَّكِرٍ</string>
    <string name="name_title_en">Indeed, We have made the Qur’an easy to remember. Is there any who will remember?</string>
    <string name="sura_list_title_ar">رَبَّنَا ظَلَمْنَآ اَنْفُسَنَا وَإِنْ لَمْ تَغْفِرْ لَنَا وَتَرْحَمْنَا لَنَكُونَنَّ مِنَ الْخٰسِرِينٍَ</string>
    <string name="sura_list_title_en">Our Lord ! we have sinned against ourselves and unless You grant us forgiveness and bestow Your mercy upon us ,we shall most certainly be lost</string>
    <string name="title_activity_sura_list_v2">All Sura</string>
    <string name="title_activity_word_meaning">WordMeaningActivity</string>
    <string name="title_activity_dictionary">DictionaryActivity</string>
    <string name="title_activity_bookmark">BookmarkActivity</string>
    <string name="string_bookmark">Bookmark List</string>
    <string name="string_bookmark_subtitle">List of all saved ayah</string>
    <string name="string_sura_list">All Sura</string>
    <string name="string_sura_list_subtitle">List of 114 sura</string>
    <string name="string_dictionary">Word By Word</string>
    <string name="string_dictionary_subtitle">Quran word by word</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="string_about">Quran Tafsir English Bangla</string>
    <string name="string_about_subtitle">About App</string>
    <string name="string_about_description">Quran Tafsir English Bangla is the free App provided to you by Akram Hossain.If you like this app, please make dua for me and my family — that Allah (SWT) blesses us and grants us peace and barakah.Thank you.\n\nQuran data was obtained from https://github.com/quran/.If you see any discrepancies then please report them.\n\n**Verse by Verse recitations uses the internet to download audio files.</string>
    <string name="text_warning">Warning</string>
    <string name="text_enable_internet">Please enable internet connection</string>
    <string name="text_ok">OK</string>
    <string name="string_quick_link">Favourites</string>
    <string name="string_quick_link_subtitle">List of saved sura</string>
    <string name="string_search">Search</string>
    <string name="string_search_term">Advance Search</string>
    <string name="string_search_subtitle">Search sura and ayah</string>
    <string name="string_search_term_subtitle">Search any ayah</string>
    <string name="spinner_title">Surah name</string>
    <string name="spinner_ayat_title">Ayah number</string>
    <string name="spinner_ayat_term">Enter any term eg: allah, الرَّحِيمِ, জান্নাত, 2:255</string>
    <string name="string_website_name">www.codxplore.com</string>
    <string name="start_from_last">Recently Viewed Surah\nসর্বশেষ পঠিত সূরা</string>
    <string name="title_word_meaning">Word Meaning</string>
    <string name="string_word_meaning_subtitle">Word meaning and transliteration </string>
    <string name="title_share_verse">Share Ayah</string>
    <string name="string_shar_verse_subtitle">You can share ayah with your loved ones</string>
    <string name="label_change_color">Choose Color</string>
    <string name="title_activity_prayer_times">PrayerTimesActivity</string>
    <string name="title_prayer_time">Prayer Times</string>
    <string name="string_prayer_times">Today\'s Prayer Times</string>
    <string name="string_fajr">Fajr</string>
    <string name="string_sunrise">Sunrise</string>
    <string name="string_dhuhr">Dhuhr</string>
    <string name="string_asr">Asr</string>
    <string name="string_magrib">Magrib</string>
    <string name="string_isha">Isha</string>
    <string name="spinner_title_v1">Select sura</string>
    <string name="string_juz">Juz\'</string>
    <string name="string_juz_subtitle">list of 30 Juz\' </string>
    <string name="string_hizb">Hizb</string>
    <string name="string_hizb_subtitle">list of 60 Hizb</string>
    <string name="string_rub">Rub\'</string>
    <string name="string_rub_subtitle">list of 240 Rub\'</string>
    <string name="string_search_by_term"><u>Advance Search</u></string>
    <string name="ppl_search">Popular Searches</string>
    <string name="text_tafsirs">তাফসির | Tafsir</string>
    <string name="title_activity_tafsir">Tafsirs</string>
    <string name="string_tafsir">Tafsir</string>
    <string name="string_tafsir_subtitle">Ibn Kathir, Ahsanul Bayaan, Abu Bakr Zakaria, Jalalayn</string>
    <string name="string_bayaan">তাফসির আহসানুল বায়ান</string>
    <string name="string_zakaria">তাফসির আবু বকর জাকারিয়া</string>
    <string name="string_jalalayn">Tafsir Jalalayn</string>
    <string name="string_ibnkathir">তাফসির ইবনে কাসির</string>
    <string name="mosque_near_me">Masjid near me</string>
    <string name="string_mn_term">Masjid near me</string>
    <string name="string_search_mn_subtitle">See nearby masjid</string>
    <string name="bismillah">بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ</string>
    <string name="settings">Settings</string>
    <string name="string_setting">Settings</string>
    <string name="string_setting_subtitle">Set font family, size</string>
    <string name="spinner_prompt">Please Select</string>
    <string name="save">Update</string>
    <string name="reset">Reset</string>
    <string name="string_tafhim">তাফহীমুল কুরআন</string>
    <string name="string_fathul_mazid">তাফসীর ফাতহুল মাজীদ</string>
    <string name="string_fezilalil_quran">তাফসীর ফী যিলালিল কোরআন</string>
    <string name="string_play">Play</string>
    <string name="string_bkmark">Bookmark</string>
    <string name="string_wrd_mni">Definition</string>
    <string name="string_cp">Copy</string>
    <string name="string_share">Share</string>
    <string name="string_del">Delete</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_author_name">Md.Akram Hossain</string>
    <string name="string_about_bn">কুরআন ইংলিশ এবং বাংলা</string>
    <string name="name_title_bn">আর আমি কুরআনকে সহজ করে দিয়েছি উপদেশ গ্রহণের জন্য, অতএব কোন উপদেশ গ্রহণকারী আছে কি?</string>
    <string name="settings_en_bn">সেটিংস</string>
    <string name="string_collapse"><u>Collapse</u></string>
    <string name="string_expand"><u>Expand</u></string>
    <string name="string_bug_report">Feedback</string>
    <string name="bug_report_title">Feedback</string>
    <string name="bug_report_subtitle">Help us improve</string>
    <string name="feedbacktype1">Praise</string>
    <string name="feedbacktype2">Gripe</string>
    <string name="feedbacktype3">Suggestion</string>
    <string name="feedbacktype4">Bug</string>
    <string name="feedbacktitle">Enter feedback details</string>
    <string name="feedbackname">Your Name</string>
    <string name="feedbackemail">Your Email</string>
    <string name="feedbacktype">Type</string>
    <string name="feedbackbody">Comments</string>
    <string name="feedbackresponse">Would you like an email response?</string>
    <string name="feedbackbutton">Send Feedback</string>
    <string-array name="feedbacktypelist">
        <item>@string/feedbacktype1</item>
        <item>@string/feedbacktype2</item>
        <item>@string/feedbacktype3</item>
        <item>@string/feedbacktype4</item>
    </string-array>
    <string name="string_show_bn_pron">Show Bangla Pronunciation</string>
    <string name="string_show_bn_trans">Show Bangla Translation</string>
    <string name="string_show_en_trans">Show English Translation</string>
    <string name="more">More</string>
    <string name="more_bn">আরও</string>
    <string name="about">About App</string>
    <string name="about_bn">অ্যাপ সম্পর্কে</string>
    <string name="privacy">Privacy Policy</string>
    <string name="privacy_bn">গোপনীয়তা নীতি</string>
    <string name="terms">Terms</string>
    <string name="terms_bn">শর্তাবলী</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_bn">মতামত</string>
    <string name="masjid">Masjid</string>
    <string name="masjid_bn">মসজিদ</string>
    <string name="brief_en">Surah Brief</string>
    <string name="brief_bn">সংক্ষিপ্ত আলোচনা</string>
    <string name="spinner_calculation_method">Calculation method</string>
    <string name="spinner_juristic_method">Asr method</string>
    <string name="string_qc_bn">কিবলা কম্পাস</string>
    <string name="string_qc_en">Qibla Compass</string>
    <string name="string_qc_subtitle">Get qibla direction</string>
    <string name="string_dg_bn">প্রতিদিনের কাজ আপডেট করুন</string>
    <string name="string_dg_en">Update daily tasks</string>
    <string name="string_dg_subtitle">Accomplish your daily goals</string>
    <string name="string_subj_en">Topic Wise</string>
    <string name="string_subj_bn">বিষয় ভিত্তিক</string>
    <string name="string_subj_subtitle">Explore by Topic</string>
    <string name="string_hint">**কিছু টপিকের বাংলা অর্থ ভুল হতে পারে**</string>
    <string name="string_hadith_en">Hadith Books</string>
    <string name="string_hadith_bn">হাদিসের বই</string>
    <string name="string_hadith_subtitle">The Hadith of the Prophet Muhammad PBUH</string>
    <string name="search_hadith">Search Hadith</string>
    <string name="search_hadith_ttl">Search Hadith</string>
    <string name="search_hadith_sbttl">Search Hadith by Term</string>
    <string name="hadith_hint">Enter any term</string>
    <string name="string_noa_bn">আল্লাহর নাম</string>
    <string name="string_noa_en">Names Of Allah</string>
    <string name="string_noa_subtitle">99 Names Of Allah - Al Asma ul Husna</string>
    <string name="search_ayah_en">Search Ayah</string>
    <string name="close_search">Close</string>
    <string name="string_dz_bn">দোয়া জিকির</string>
    <string name="string_dz_en">Dua Zikr</string>
    <string name="string_dz_subtitle">Dua and Zikr</string>
    <string name="string_info">Ref</string>
    <string name="string_ms_en">Monthly Progress</string>
    <string name="string_ms_subtitle">Monthly progress of your daily goals</string>
    <string name="string_ms_underline"><u>Monthly Progress</u></string>
    <string name="string_bcre_bn">ব্যাকআপ রিস্টোর</string>
    <string name="string_bcre_en">Backup Restore</string>
    <string name="string_bcre_subtitle">Backup and restore your data</string>
    <string name="string_quran_online">Visit <a href="http://quran.codxplore.com">http://quran.codxplore.com</a> to read Quran online</string>
    <string name="string_tajweed_text">Visit <a href="https://alquran.cloud/tajweed-guide">https://alquran.cloud/tajweed-guide</a> for Tajweed guide</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore Backup</string>
    <string name="string_friday_ttl">It\'s Friday</string>
    <string name="string_friday_subttl">Recite Surah Al-Kahf</string>
    <string name="read_surah_kahf">Open Surah Kahf</string>
    <string name="friday_ttl_bn">আজ শুক্রবার!</string>
    <string name="string_friday_subttl_bn">সূরা আল-কাহাফ তেলাওয়াত</string>
    <string name="string_nightly_ttl">Nightly Recitation</string>
    <string name="string_nightly_ttl_bn">রাতের তেলাওয়াত</string>
    <string name="string_night_mulk_ttl">Recite Surah Al-Mulk</string>
    <string name="string_night_mulk_ttl_bn">সূরা আল-মূলক তেলাওয়াত</string>
    <string name="string_night_baqara_ttl">Last 10 verse of\nSurah Baqarah</string>
    <string name="string_night_baqara_ttl_bn">সুরা আল-বাক্বারার শেষের\n১০ আয়াত তেলাওয়াত</string>
    <string name="read_surah_mulk">Open Surah Al-Mulk</string>
    <string name="read_surah_baqarah">Open Surah Al-Baqarah</string>
    <string name="word_challenge_subttl_bn">কুরআন শেখার মজার উপায়</string>
</resources>