<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BugReportActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/topBugReportBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_color"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bug_report_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/bug_report_title"
                    android:textColor="@color/colorWhiteDN"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/bug_report_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/bug_report_subtitle"
                    android:textColor="@color/colorWhiteDN"
                    android:textSize="15sp" />

            </LinearLayout>

        </RelativeLayout>

        <ScrollView
            android:id="@+id/ScrollView01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topBugReportBar"
            android:scrollbars="vertical"
            android:layout_marginTop="10dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <EditText
                    android:id="@+id/EditTextName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/feedbackname"
                    android:minHeight="48dp"
                    android:inputType="textPersonName"></EditText>

                <EditText
                    android:id="@+id/EditTextEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:hint="@string/feedbackemail"
                    android:inputType="textEmailAddress"></EditText>

                <Spinner
                    android:id="@+id/SpinnerFeedbackType"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:entries="@array/feedbacktypelist"
                    android:prompt="@string/feedbacktype"></Spinner>

                <EditText
                    android:id="@+id/EditTextFeedbackBody"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/feedbackbody"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    android:lines="5"></EditText>


                <TextView
                    android:id="@+id/imageSelect"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Attach an image"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="fill_parent"
                    android:layout_height="256dp" />

                <CheckBox
                    android:id="@+id/CheckBoxResponse"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:minWidth="48dp"
                    android:text="@string/feedbackresponse"></CheckBox>

                <Button
                    android:id="@+id/ButtonSendFeedback"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feedbackbutton"
                    android:textAllCaps="false"></Button>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>