<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreenActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/root_view">

        <TextView
            android:id="@+id/splash_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            android:text="@string/string_about"/>

        <TextView
            android:id="@+id/splash_app_bn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            android:layout_below="@+id/splash_title"
            android:text="@string/string_about_bn"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/splash_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_quran_radio"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/splash_title_ar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="25dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_below="@+id/splash_icon"
                android:text="@string/name_title_ar"/>

            <TextView
                android:id="@+id/splash_title_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:paddingLeft="5sp"
                android:paddingRight="5sp"
                android:layout_below="@+id/splash_title_ar"
                android:text="@string/name_title_en"/>


            <TextView
                android:id="@+id/splash_title_bn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:paddingLeft="5sp"
                android:paddingRight="5sp"
                android:layout_below="@+id/splash_title_en"
                android:text="@string/name_title_bn"/>


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true" />

        </LinearLayout>


        <TextView
            android:id="@+id/splash_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:text="@string/string_author_name"
            android:layout_alignParentBottom="true"/>

        <ImageView
            android:id="@+id/background_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/mosque_pattern"
            android:layout_alignParentBottom="true"/>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>