<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#DD000000">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/bg_color"
            android:id="@+id/topAboutBar"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/bookmark_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp"
                    android:text="@string/string_about"/>

                <TextView
                    android:id="@+id/bookmark_sub_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp"
                    android:text="@string/string_about_subtitle"/>

            </LinearLayout>


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/topAboutBar"
            android:layout_marginTop="2dp"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            android:textIsSelectable="true"
            android:paddingLeft="8dp"
            android:text="@string/string_about_description"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>